--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
       - name: Validate schemas
-        run: python scripts/validate_schemas.py
+        run: python -m scripts.validate_schemas
       - name: Lint
-        run: python -m ruff scripts tests
+        run: python -m ruff check scripts tests
       - name: Tests
         run: python -m unittest discover -s tests
