--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,9 @@ jobs:
         run: python -m scripts.validate_schemas
       - name: Lint
         run: python -m ruff check scripts tests
+      - name: Check markdown links
+        uses: lycheeverse/lychee-action@v1
+        with:
+          args: --config .lychee.toml "**/*.md"
       - name: Tests
         run: python -m unittest discover -s tests
