--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,9 @@ jobs:
         run: |
           python -m scripts.knowledge_index --output knowledge/INDEX.md
           git diff --exit-code -- knowledge/INDEX.md
+      - name: Check coverage matrix
+        run: |
+          python -m scripts.coverage_matrix --input docs/coverage_matrix.yaml --output docs/COVERAGE_MATRIX.md
+          git diff --exit-code -- docs/COVERAGE_MATRIX.md
       - name: Demo runner plan
         run: python -m scripts.demo_runner --mode plan
