--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
         with:
           args: --config .lychee.toml "**/*.md"
       - name: Tests
-        run: python -m unittest discover -s tests
+        run: |
+          coverage run -m unittest discover -s tests
+          coverage report -m
       - name: Check knowledge index
         run: |
           python -m scripts.knowledge_index --output knowledge/INDEX.md
