--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,4 @@ nav:
       - Component Manifest: COMPONENT_MANIFEST.md
       - Knowledge Format: KNOWLEDGE_FORMAT.md
       - Knowledge Tags: KNOWLEDGE_TAGS.md
+      - Severity Model: SEVERITY_MODEL.md
