--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
         run: |
           python -m scripts.coverage_matrix --input docs/coverage_matrix.yaml --output docs/COVERAGE_MATRIX.md
           git diff --exit-code -- docs/COVERAGE_MATRIX.md
+      - name: Check component registry index
+        run: |
+          python -m scripts.component_registry_index --output data/component_registry_index.json
+          git diff --exit-code -- data/component_registry_index.json
       - name: Check golden examples
         run: |
           python -m scripts.golden_examples --roots examples --roots data --roots evidence --extensions json
