--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,16 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "Apache-2.0" }
 authors = [{ name = "Raven DevOps", email = "support@ravdevops.com" }]
-dependencies = []
+dependencies = ["pyyaml>=6.0"]
+
+[project.optional-dependencies]
+dev = [
+  "jsonschema>=4.19.0",
+  "ruff>=0.3.0",
+  "hypothesis>=6.98.0",
+  "coverage>=7.4.0",
+  "mkdocs>=1.6.0",
+]
 
 [project.scripts]
 bbhai = "bbhai:main"
