--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
+      - name: Packaging smoke test
+        run: |
+          python -m pip install -e .
+          bbhai --help
       - name: Validate schemas
         run: python -m scripts.validate_schemas
       - name: Lint
