Update CI actions and pytest asyncio defaults

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,6 @@ py-modules = ["bbhai"]
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["scripts*"]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
