--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,18 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Keep repo control files LF even on Windows.
+.gitattributes text eol=lf
+.gitignore text eol=lf
+.env.example text eol=lf
+
+# Enforce LF to avoid CRLF churn across platforms.
+*.py text eol=lf
+*.md text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.json text eol=lf
+*.toml text eol=lf
+*.txt text eol=lf
+*.sh text eol=lf
+*.ps1 text eol=lf
