Clarify Bugcrowd env template for OTP prompting

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,8 @@
 BUGCROWD_COOKIE=
 
 # Optional: username/password login via identity.bugcrowd.com.
-# Note: May require OTP / backup codes.
+# Note: May require OTP / backup codes (the script can prompt when run interactively).
 BUGCROWD_EMAIL=
 BUGCROWD_PASSWORD=
 BUGCROWD_OTP_CODE=
 BUGCROWD_BACKUP_OTP_CODE=
-
