Support Bugcrowd backup codes file for MFA

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,11 @@ BUGCROWD_EMAIL=
 BUGCROWD_PASSWORD=
 BUGCROWD_OTP_CODE=
 BUGCROWD_BACKUP_OTP_CODE=
+
+# Optional: file containing backup codes (one per line). If unset, the script will
+# also look for `BUGCROWD_backup_codes` in the repo root.
+BUGCROWD_BACKUP_CODES_FILE=
+
+# Optional: remove a used backup code from BUGCROWD_BACKUP_CODES_FILE after a
+# successful login. Values: 1/true/yes/on.
+BUGCROWD_CONSUME_BACKUP_CODE=0
