--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ BUGCROWD_BACKUP_CODES_FILE=
 # Optional: remove a used backup code from BUGCROWD_BACKUP_CODES_FILE after a
 # successful login. Values: 1/true/yes/on.
 BUGCROWD_CONSUME_BACKUP_CODE=0
+
+# Optional: allow the script to prompt for OTP/backup codes when required.
+# Values: 1/true/yes/on. Prefer leaving this disabled for automated runs.
+BUGCROWD_PROMPT_MFA=0
