--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,14 @@ jobs:
         run: |
           python -m scripts.knowledge_index --output knowledge/INDEX.md
           git diff --exit-code -- knowledge/INDEX.md
+      - name: Check published knowledge docs
+        run: |
+          python -m scripts.publish_knowledge_docs
+          if [ -n "$(git status --porcelain -- docs/KNOWLEDGE_INDEX.md docs/knowledge)" ]; then
+            echo "Published knowledge docs are out of date. Run: python -m scripts.publish_knowledge_docs"
+            git status --porcelain -- docs/KNOWLEDGE_INDEX.md docs/knowledge
+            exit 1
+          fi
       - name: Check coverage matrix
         run: |
           python -m scripts.coverage_matrix --input docs/coverage_matrix.yaml --output docs/COVERAGE_MATRIX.md
@@ -84,4 +92,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
       - name: Build docs
-        run: mkdocs build --strict
+        run: python -m mkdocs build --strict
