--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
             git status --porcelain -- docs/KNOWLEDGE_INDEX.md docs/knowledge
             exit 1
           fi
+      - name: Check MkDocs copies
+        run: |
+          python -m scripts.sync_mkdocs_copies
+          git diff --exit-code -- docs/BUGCROWD.md docs/GUIDE.md
       - name: Check coverage matrix
         run: |
           python -m scripts.coverage_matrix --input docs/coverage_matrix.yaml --output docs/COVERAGE_MATRIX.md
