--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,14 @@ on:
   pull_request:
 
 jobs:
-  lint-test:
+  quality:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
           cache: "pip"
           cache-dependency-path: |
             requirements.txt
@@ -44,10 +41,52 @@ jobs:
         run: python -m scripts.validate_markdown_ascii
       - name: Knowledge lint
         run: python -m scripts.knowledge_lint
+
+  tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+    steps:
+      - uses: actions/checkout@v6
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
       - name: Tests
+        if: matrix.python-version != '3.11'
+        run: python -m unittest discover -s tests
+      - name: Tests with coverage
+        if: matrix.python-version == '3.11'
         run: |
           coverage run -m unittest discover -s tests
           coverage report -m
+
+  generated-artifacts:
+    runs-on: ubuntu-latest
+    needs: [quality, tests]
+    steps:
+      - uses: actions/checkout@v6
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
       - name: Check knowledge index
         run: |
           python -m scripts.knowledge_index --output knowledge/INDEX.md
@@ -81,6 +120,7 @@ jobs:
 
   docs:
     runs-on: ubuntu-latest
+    needs: [quality]
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
