--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,32 @@ on:
   pull_request:
 
 jobs:
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+          cache-dependency-path: command-center/package-lock.json
+      - name: Install frontend dependencies
+        run: npm ci
+        working-directory: command-center
+      - name: Frontend lint
+        run: npm run lint
+        working-directory: command-center
+      - name: Frontend typecheck
+        run: npm run typecheck
+        working-directory: command-center
+      - name: Frontend unit tests
+        run: npm run test
+        working-directory: command-center
+      - name: Frontend build
+        run: npm run build
+        working-directory: command-center
+
   quality:
     runs-on: ubuntu-latest
     steps:
@@ -72,7 +98,7 @@ jobs:
 
   generated-artifacts:
     runs-on: ubuntu-latest
-    needs: [quality, tests]
+    needs: [frontend, quality, tests]
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
