--- a/command-center/package.json
+++ b/command-center/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint src",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:update": "playwright test --update-snapshots",
+    "test:e2e:install": "playwright install chromium",
     "build": "npm run typecheck && vite build",
     "preview": "vite preview"
   },
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@playwright/test": "^1.58.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.18",
