--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [{ name = "Raven DevOps", email = "support@ravdevops.com" }]
 dependencies = [
   "jsonschema==4.26.0",
   "pyyaml==6.0.3",
-  "fastapi==0.115.8",
+  "fastapi==0.121.0",
   "uvicorn==0.34.0",
 ]
 
@@ -25,6 +25,7 @@ dev = [
   "coverage==7.13.1",
   "mkdocs==1.6.1",
   "pip-audit==2.10.0",
+  "httpx==0.28.1",
 ]
 
 [project.scripts]
